@@ -1,1 +1,1 @@
-441b9523a3bc18d16fb79aae089d1737 *addons.xml
+ead2892a013f1ab036df7a5f57369988 *addons.xml
