@@ -1,3 +1,5 @@
+2014-12-21
+ * Přiložený patch řeší přechod iVysilani z RTMP na HLS. Thx radek.senfeld
 2014-10-25
  * Pridani statistik
 2014-09-24
